--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,22 @@
-name: Python 3.9.8 
+
+   
+name: Python 3.8
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8.11
+    - name: Set up Python 3.8.12
       uses: actions/setup-python@v1
       with:
-        python-version: 3.9.8
+        python-version: 3.8.12
     - name: Install dependencies
       run: |
-                make install
+        make install
     - name: Lint
       run: |
-                make lint
+        make lint
+    - name: Test
+      run: |
+        make test
